--- a/app/static/recipe-detail.css
+++ b/app/static/recipe-detail.css
@@ -9,7 +9,7 @@
 /* THEMES */
 :root {
 	--color-popupwindow-bg: rgba(0,0,0,0.76);
-	--color-popupwindow-content-bg: #2b2b2b;
+	--color-popupwindow-content-bg: #282a2c;
 	--color-popupwindow-content-font: #ffffff;
 	--color-popupwindow-close: #ffffff;
 	--color-popupwindow-close-hover: #cfcfcf;
@@ -34,7 +34,7 @@
 }
 [data-theme="light"] {
 	--color-popupwindow-bg: rgba(255,255,255,0.76);
-	--color-popupwindow-content-bg: #cfcfcf;
+	--color-popupwindow-content-bg: #d5d0c8;
 	--color-popupwindow-content-font: #000000;
 	--color-popupwindow-close: #000000;
 	--color-popupwindow-close-hover: #2b2b2b;
@@ -59,7 +59,7 @@
 }
 [data-theme="dark"] {
 	--color-popupwindow-bg: rgba(0,0,0,0.76);
-	--color-popupwindow-content-bg: #2b2b2b;
+	--color-popupwindow-content-bg: #282a2c;
 	--color-popupwindow-content-font: #ffffff;
 	--color-popupwindow-close: #ffffff;
 	--color-popupwindow-close-hover: #cfcfcf;
@@ -168,7 +168,7 @@
 .popupwindow {
     display: none;
     position: fixed;
-    z-index: 1;
+    z-index: 2000;
     left: 0;
     top: 0;
     width: 100%;
@@ -178,6 +178,7 @@
 }
 .popupwindow-content {
     background-color: var(--color-popupwindow-content-bg);
+	border: 1px solid var(--color-navbar-border-bottom);
 	border-radius: 10px;
 	color: var(--color-popupwindow-content-font);
     height: var(--height-popupwindow);
